<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.mosip.idrepository</groupId>
		<artifactId>id-repository-parent</artifactId>
		<version>1.4.0-SNAPSHOT</version>
	</parent>

	<artifactId>id-repository-identity-service</artifactId>
	<version>1.4.0-SNAPSHOT</version>
	<name>identity-service</name>
	<description>ID-Repository Identity service</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<kernel.core.version>1.3.1-rc.1</kernel.core.version>
		<kernel.idvalidator.uin.version>1.3.1-rc.1</kernel.idvalidator.uin.version>
		<kernel.cbeffutil.api.version>1.3.1</kernel.cbeffutil.api.version>
		<kernel.idobjectvalidator.version>1.3.1-rc.1</kernel.idobjectvalidator.version>
		<kernel-idvalidator-vid.version>1.3.1-rc.1</kernel-idvalidator-vid.version>
		<kernel-idvalidator-rid.version>1.3.1-rc.1</kernel-idvalidator-rid.version>
		<kernel.khazana.version>1.4.0-SNAPSHOT</kernel.khazana.version>
		<kernel.auth.adapter.version>1.3.1</kernel.auth.adapter.version>
		<central.publishing.maven.plugin.version>0.11.0</central.publishing.maven.plugin.version>
		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
		<kernel.biosdk.provider.version>1.3.1</kernel.biosdk.provider.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-core</artifactId>
			<version>${kernel.core.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.commons</groupId>
					<artifactId>commons-lang3</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-idvalidator-uin</artifactId>
			<version>${kernel.idvalidator.uin.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-afterburner</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-cbeffutil-api</artifactId>
			<version>${kernel.cbeffutil.api.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-idvalidator-rid</artifactId>
			<version>${kernel-idvalidator-rid.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-idvalidator-rid</artifactId>
			<version>${kernel-idvalidator-rid.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.idrepository</groupId>
			<artifactId>id-repository-core</artifactId>
			<version>${id.repository.core.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-idobjectvalidator</artifactId>
			<version>${kernel.idobjectvalidator.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-idvalidator-vid</artifactId>
			<version>${kernel-idvalidator-vid.version}</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.commons</groupId>
			<artifactId>khazana</artifactId>
			<version>${kernel.khazana.version}</version>
			<exclusions>
				<exclusion>
					<groupId>io.mosip.kernel</groupId>
					<artifactId>kernel-keymanager-service</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<artifactId>kernel-biosdk-provider</artifactId>
			<groupId>io.mosip.kernel</groupId>
			<version>${kernel.biosdk.provider.version}</version>
		</dependency>
	</dependencies>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://central.sonatype.com/api/v1/publisher</url>
		</repository>
	</distributionManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>${central.publishing.maven.plugin.version}</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>default-publish</id>
						<phase>none</phase>
						<goals>
							<goal>publish</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<publishingServerId>ossrh</publishingServerId>
					<autoPublish>false</autoPublish>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven.deploy.plugin.version}</version>
				<configuration>
					<skip>true</skip>
				</configuration>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>none</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
						<configuration>
							<skip>true</skip>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
					<layout>ZIP</layout>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
							<goal>repackage</goal>
						</goals>
						<configuration>
							<attach>false</attach>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
